# blobspace

./: .gitignore  Cargo.toml  README.md
analyzer/: Cargo.toml
analyzer/src/: main.rs
analyzer/src/blobs/: blob_analyzer.rs  mod.rs
indexer/: Cargo.toml
indexer/src/: lib.rs
src/: lib.rs  main.rs
src/blobs/: blob_analyzer.rs  mod.rs  types.rs
