[package]
name = "blobspace"
description = "Store, index, query, and analyze the blobspace"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "indexer",
    "analyzer",
]

[[bin]]
name="indexer"
path = "indexer/src/bin/cli.rs"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
eyre = "0.6.12"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }