[workspace]
members = [
    "indexer",
    "analyzer",
]

[workspace.package]
name = "blobspace"
description = "Store, index, query, and analyze the blobspace"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }

axum = "0.6"
hyper = "0.14"
clap = { version = "4.5.18", features = ["derive"] }
eyre = "0.6.12"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"