[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
reth.workspace = true
reth-exex.workspace = true
axum.workspace = true
hyper.workspace = true
clap.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }